# jarvis-pm

./: .gitignore  DEPLOY_OPTIONS.md  DEVELOPMENT_GUIDE.md  E2E_FIX_PLAN.md  E2E_FIX_SUMMARY.md  E2E_TEST_OPTIMIZATION_REPORT.md  ECC_AUDIT_REPORT.md  INTEGRATION.md  JarvisPM_项目汇报材料.md  JarvisPM_项目汇报材料_务实版.md  PRD_GENERATOR_IMPLEMENTATION_SUMMARY.md  PRD_GENERATOR_README.md  README.md  SYSTEM_AUDIT.md  USER_EXPERIENCE_AUDIT_2026-04-15.md  competitor_analysis_b.json  docker-compose.prod.yml  docker-compose.yml  e2e_demo_screenshots.py  e2e_test.py  full_demo_journey.py  prd_content_check.md  prd_output_ai.json  railway.toml  review_agenda.json  seed_demo.py  smoke_test.py  switch-node.bat  switch-node.ps1  vercel.json  功能完成总结.md  启动JarvisPM.bat  温附二切片借阅平台_PRD_AI生成版.md  病理切片借阅平台_评审问答.json
apps/api/: .env.example  .env.test  .gitignore  CUsers13400test_project.json  CUsers13400test_projects_list.json  CUsers13400test_rag.json  Dockerfile  alembic.ini  demo_slide_lending.py  demo_slide_lending_report.md  env.production.example  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-optimized.txt  requirements.txt  response.json  server_response.json  start.bat  start.py  test_all_features.py  test_data.csv  test_syntax.py
apps/api/alembic/: env.py
apps/api/app/: main.py
apps/api/docs/: architecture_csv_upload.md  architecture_db_bi.md  architecture_rag.md
apps/api/scripts/: export_skills.py
apps/api/test_outputs/: 01_create_project.json  02_list_projects.json  03_skill_executions.json  04_tool_user_research.json  04_tool_user_research.md  05_tool_stakeholders.json  05_tool_stakeholders.md  06_tool_competitors.json  06_tool_competitors.md  07_tool_data_analysis.json  07_tool_data_analysis.md  08_tool_review_materials.json  08_tool_review_materials.md  09_tool_prototype.json  09_tool_prototype.md  10_prd_default.json  10_prd_default_markdown.md  11_prd_medical.json  11_prd_medical_markdown.md  12_prd_export_md.json  13_prd_generate_chapter.json  14_workflow_templates.json  15_workflow_execute.json  16_battle_create.json  17_battle_advance_day1.json  18_battle_advance_day2.json  19_battle_advance_day3.json  20_final_prd_list.json
apps/api/tests/: __init__.py  conftest.py  pytest.ini  test_agents.py  test_ai_endpoints.py  test_annotations.py  test_auth.py  test_battles.py  test_benchmarks.py  test_code.py  test_competitors.py  test_config_validation.py  test_delivery.py  test_endpoints_prd.py  test_evaluation.py  test_export.py  test_feedback.py  test_health.py  test_integration.py  test_jobs.py  test_llm_client.py  test_llm_provider.py  test_medical_terminology.py  test_migrations.py  test_navigation.py  test_output_validator.py  test_ownership.py  test_personas.py  test_prd_versions.py  test_prds.py  test_prds_extended.py  test_projects.py  test_prompts.py  test_rag.py  test_requirements.py  test_reviews.py  test_skill_processor_enhanced.py  test_skills.py  test_soft_delete.py  (+7 more)
(+371 files in other folders)
